--- a/app/views/organizations/invitations/index.html.erb
+++ b/app/views/organizations/invitations/index.html.erb
@@ -21,7 +21,9 @@
                 <%= invitation.user.email %>
               </div>
             </td>
-            <td data-label="<%= AccessRequest.human_attribute_name(:created_at) %>">
+            <td
+              data-label="<%= AccessRequest.human_attribute_name(:created_at) %>"
+            >
               <%= invitation.created_at.strftime("%d/%m/%Y") %>
             </td>
             <td>
