--- a/app/views/organizations/subscriptions/_features.html.erb
+++ b/app/views/organizations/subscriptions/_features.html.erb
@@ -1,9 +1,7 @@
 <%= render PageComponent.new(title: t("organizations.subscriptions.features.title"), full_width: false) do %>
   <dl class="space-y-2">
     <% Rails.application.config_for(:settings)[:pro_features].map do |feature| %>
-      <div>
-        <%= feature %>
-      </div>
+      <div><%= feature %></div>
     <% end %>
   </dl>
 <% end %>
