--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,11 +10,17 @@
     <% if Current.organization %>
       <div class="lg:hidden dropdown dropdown-start group">
         <div tabindex="0" role="button" class="btn btn-ghost">
-            <%= organization_avatar(Current.organization, classes: "size-6") %>
-            <%= Current.organization.name %>
+          <%= organization_avatar(Current.organization, classes: "size-6") %>
+          <%= Current.organization.name %>
           <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-focus-within:rotate-180" %>
         </div>
-        <ul tabindex="-1" class="menu menu-xl dropdown-content bg-base-100 rounded-box mt-3 shadow border border-base-content/20">
+        <ul
+          tabindex="-1"
+          class="
+            menu menu-xl dropdown-content bg-base-100 rounded-box mt-3
+            shadow border border-base-content/20
+          "
+        >
           <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(Current.organization), icon: "svg/user-group.svg", badge: Current.organization.user_requests.pending.count, active: [["organizations/memberships", "organizations/invitations", "organizations/membership_requests"], []] %>
           <% if Current.membership.admin? %>
             <%= nav_link t("organizations.edit.title"), edit_organization_path(Current.organization), icon: "svg/cog-6-tooth.svg", active: [["organizations"], ["edit"]] %>
@@ -34,6 +40,7 @@
       <kbd class="kbd kbd-sm hidden lg:inline-flex">⌘</kbd>
       <kbd class="kbd kbd-sm hidden lg:inline-flex">K</kbd>
     <% end %>
+
     <%# end %>
   </div>
 
@@ -49,9 +56,15 @@
         <%= render "users/notifications/notifications_count", unread: current_user.unseen_notifications_count %>
         <%= inline_svg_tag "svg/bell.svg", class: "w-6 h-6" %>
       </div>
-      <div tabindex="-1" class="w-96 p-2 dropdown-content bg-base-100 rounded-box mt-3 shadow border border-base-content/20">
+      <div
+        tabindex="-1"
+        class="
+          w-96 p-2 dropdown-content bg-base-100 rounded-box mt-3 shadow
+          border border-base-content/20
+        "
+      >
         <div class="w-full flex justify-end">
-        <%= link_to "View all", user_notifications_path, class: "link link-hover" %>
+          <%= link_to "View all", user_notifications_path, class: "link link-hover" %>
         </div>
         <%= turbo_frame_tag :notifications, src: user_notifications_path, loading: :lazy %>
       </div>
@@ -62,7 +75,13 @@
         <%= user_avatar(current_user) %>
         <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-focus-within:rotate-180" %>
       </div>
-      <ul tabindex="-1" class="menu menu-xl dropdown-content bg-base-100 rounded-box mt-3 shadow border border-base-content/20">
+      <ul
+        tabindex="-1"
+        class="
+          menu menu-xl dropdown-content bg-base-100 rounded-box mt-3 shadow
+          border border-base-content/20
+        "
+      >
         <%= render "shared/user_links" %>
       </ul>
     </div>
