--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,4 @@
 <%= render PageComponent.new(title: t("devise.views.passwords.edit.title"), full_width: false) do %>
-
   <%= form_with model: resource, as: resource_name, url: password_path(resource_name), method: :put, class: "space-y-4" do |f| %>
     <%= render "shared/errors", object: resource %>
     <%= f.hidden_field :reset_password_token %>
@@ -7,8 +6,11 @@
     <div class="space-y-1">
       <%= f.label :password, t("devise.views.passwords.edit.password_label"), class: "block text-sm font-medium" %>
       <% if @minimum_password_length %>
-        <p class="text-xs"><%= t("devise.views.passwords.edit.password_minimum", count: @minimum_password_length) %></p>
+        <p class="text-xs">
+          <%= t("devise.views.passwords.edit.password_minimum", count: @minimum_password_length) %>
+        </p>
       <% end %>
+
       <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "input w-full", placeholder: t("devise.views.passwords.edit.password_placeholder") %>
     </div>
 
