--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,8 +15,11 @@
         <div class="space-y-1">
           <%= f.label :password, t("devise.views.registrations.new.password_label"), class: "block text-sm font-medium" %>
           <% if @minimum_password_length %>
-            <p class="text-xs"><%= t("devise.views.registrations.new.password_minimum", count: @minimum_password_length) %></p>
+            <p class="text-xs">
+              <%= t("devise.views.registrations.new.password_minimum", count: @minimum_password_length) %>
+            </p>
           <% end %>
+
           <%= f.password_field :password, autocomplete: "new-password", class: "input w-full", placeholder: t("devise.views.registrations.new.password_placeholder") %>
         </div>
 
@@ -24,7 +27,6 @@
           <%= f.submit t("devise.views.registrations.new.submit"), class: "btn btn-primary btn-block" %>
         </div>
       <% end %>
-
       <%= render "devise/shared/links" %>
     <% else %>
       <%= link_to t("devise.views.sessions.new.sign_in_with_email"), new_user_registration_path(via_email: true), class: "btn btn-primary btn-block" %>
