--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en" class="h-full bg-base-100 text-base-content">
   <head>
     <%= render "layouts/head" %>
@@ -6,8 +7,6 @@
   </head>
 
   <body class="flex h-dvh">
-    <main class="flex-grow overflow-y-auto flex flex-col">
-      <%= yield %>
-    </main>
+    <main class="flex-grow overflow-y-auto flex flex-col"><%= yield %></main>
   </body>
 </html>
