--- a/app/views/organizations/_table.html.erb
+++ b/app/views/organizations/_table.html.erb
@@ -12,14 +12,21 @@
       </thead>
       <tbody id="organizations">
         <% organizations.each do |organization| %>
-          <tr class="cursor-pointer" data-controller="visitable" data-action="click->visitable#visit" data-url="<%= organization.participant?(current_user) ? organization_path(organization) : public_organization_path(organization) %>">
+          <tr
+            class="cursor-pointer"
+            data-controller="visitable"
+            data-action="click->visitable#visit"
+            data-url="<%= organization.participant?(current_user) ? organization_path(organization) : public_organization_path(organization) %>"
+          >
             <td data-label="<%= Organization.human_attribute_name(:name) %>">
               <div class="flex items-center gap-2">
                 <%= organization_avatar(organization) %>
                 <span class="font-medium"><%= highlight(organization.name, params[:query]) %></span>
               </div>
             </td>
-            <td data-label="<%= Organization.human_attribute_name(:privacy_setting) %>">
+            <td
+              data-label="<%= Organization.human_attribute_name(:privacy_setting) %>"
+            >
               <span class="font-medium text-sm">
                 <%= privacy_setting_options(organization.privacy_setting)[:display_text] %>
               </span>
@@ -27,7 +34,9 @@
             <td data-label="Members">
               <%= render "organizations/users_list", organization: %>
             </td>
-            <td data-label="<%= Organization.human_attribute_name(:created_at) %>">
+            <td
+              data-label="<%= Organization.human_attribute_name(:created_at) %>"
+            >
               <%= organization.created_at.strftime("%B %d, %Y") %>
             </td>
             <td>
@@ -38,7 +47,6 @@
       </tbody>
     </table>
   </div>
-
   <%= render "shared/pagination", pagy: @pagy if @pagy.present? %>
 <% else %>
   <%= render EmptyStateComponent.new %>
