--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,19 @@
-<footer class="footer lg:footer-horizontal p-4 text-center border-t border-base-content/20 bg-base-100 gap-y-4">
+<footer
+  class="
+    footer lg:footer-horizontal p-4 text-center border-t
+    border-base-content/20 bg-base-100 gap-y-4
+  "
+>
   <aside>
     <div>
       <%= link_to root_path, class: "no-underline" do %>
         <%= image_tag "logo-long.png", class: "w-auto h-8 dark:invert" %>
       <% end %>
     </div>
-    &copy; <%= Time.zone.now.year %>
-    <%= Rails.application.config_for(:settings).dig(:site, :name) %>.
+    &copy;
+    <%= Time.zone.now.year %>
+    <%= Rails.application.config_for(:settings).dig(:site, :name) %>
+    .
     <%= t(".all_rights_reserved") %>
   </aside>
 
@@ -14,6 +21,7 @@
     <%= active_link_to t("static.index.title"), root_path, active: :exclusive, class_active: "underline", class: "link link-hover" %>
     <%= active_link_to t("static.pricing.title"), pricing_path, active: :exclusive, class_active: "underline", class: "link link-hover" %>
   </nav>
+
   <nav>
     <%= active_link_to t("static.terms.title"), terms_path, data: { turbo_frame: :modal }, class_active: "underline", class: "link link-hover" %>
     <%= active_link_to t("static.privacy.title"), privacy_path, data: { turbo_frame: :modal }, class_active: "underline", class: "link link-hover" %>
