--- a/app/views/shared/_pagination.html.erb
+++ b/app/views/shared/_pagination.html.erb
@@ -1,5 +1,3 @@
 <% if pagy.pages > 1 %>
-  <div class="flex justify-center mt-4">
-    <%== pagy_nav(pagy) %>
-  </div>
+  <div class="flex justify-center mt-4"><%== pagy_nav(pagy) %></div>
 <% end %>
