--- a/app/views/users/notifications/_notification.html.erb
+++ b/app/views/users/notifications/_notification.html.erb
@@ -1,5 +1,8 @@
-<tr id="notification_<%= notification.id %>" class="<%= notification.seen? ? "bg-base-100" : "bg-primary/10" %> hover:bg-base-200 transition-colors duration-200 cursor-pointer"
-    onclick="window.location='<%= notification.url %>'">
+<tr
+  id="notification_<%= notification.id %>"
+  class="<%= notification.seen? ? "bg-base-100" : "bg-primary/10" %> hover:bg-base-200 transition-colors duration-200 cursor-pointer"
+  onclick="window.location='<%= notification.url %>'"
+>
   <td data-label="Notification">
     <div class="flex items-center gap-3">
       <% if notification.respond_to?(:icon) && notification.icon.present? %>
@@ -10,7 +13,5 @@
       <span class="text-sm text-base-content"><%= notification.message %></span>
     </div>
   </td>
-  <td>
-    <%= time_ago_in_words(notification.created_at) %> ago
-  </td>
+  <td><%= time_ago_in_words(notification.created_at) %> ago</td>
 </tr>
