--- a/app/views/users/notifications/_notifications_count.html.erb
+++ b/app/views/users/notifications/_notifications_count.html.erb
@@ -1,4 +1,7 @@
-<span id="notification_count" class="absolute top-0 right-0 px-1 rounded-full bg-red-500 text-white text-xs">
+<span
+  id="notification_count"
+  class="absolute top-0 right-0 px-1 rounded-full bg-red-500 text-white text-xs"
+>
   <%= if unread.positive?
         unread > 9 ? "9+" : unread
       end %>
