--- a/app/views/users/referrals/index.html.erb
+++ b/app/views/users/referrals/index.html.erb
@@ -1,7 +1,18 @@
 <%= render PageComponent.new(title: t(".title"), subtitle: t(".subtitle")) do |component| %>
-  <div data-controller="clipboard" data-clipboard-success-content-value="<%= t("shared.actions.copied") %>" class="flex items-center gap-2">
+  <div
+    data-controller="clipboard"
+    data-clipboard-success-content-value="<%= t("shared.actions.copied") %>"
+    class="flex items-center gap-2"
+  >
     <%= text_field_tag nil, root_url(Refer.param_name => @referral_code.code), readonly: true, data: { clipboard_target: "source" }, class: "input w-full" %>
-    <button type="button" data-action="clipboard#copy" data-clipboard-target="button" class="btn btn-neutral"><%= t("shared.actions.copy") %></button>
+    <button
+      type="button"
+      data-action="clipboard#copy"
+      data-clipboard-target="button"
+      class="btn btn-neutral"
+    >
+      <%= t("shared.actions.copy") %>
+    </button>
   </div>
 
   <br>
@@ -55,7 +66,12 @@
       </table>
     </div>
   <% else %>
-    <div class="text-center py-16 text-base-content/50 bg-base-200 rounded-2xl border border-base-content/2">
+    <div
+      class="
+        text-center py-16 text-base-content/50 bg-base-200 rounded-2xl
+        border border-base-content/2
+      "
+    >
       <%= t(".table.no_referrals") %>
     </div>
   <% end %>
