--- a/app/views/organizations/subscriptions/_pricing.html.erb
+++ b/app/views/organizations/subscriptions/_pricing.html.erb
@@ -1,48 +1,61 @@
 <%= render PageComponent.new(title: t(".title"), full_width: false) do %>
-	<div class="grid gap-8">
-		<% Rails.application.config_for(:settings)[:plans].each do |plan| %>
-			<div class="border border-base-content/20 rounded-xl text-center flex flex-col">
-				<div class="leading-none grow">
-					<% if plan[:interval].to_s == "year" %>
-						<span class="inline-block bg-green-100 text-green-700 text-xs font-medium px-2.5 py-0.5 rounded-full mt-2">
-							<%= t(".save_yearly") %>
-						</span>
-					<% end %>
-				</div>
+  <div class="grid gap-8">
+    <% plans.each do |plan| %>
+      <div class="border border-base-content/20 rounded-xl text-center flex flex-col">
+        <div class="leading-none grow">
+          <% if plan[:interval].to_s == "year" %>
+            <span
+              class="
+                inline-block bg-green-100 text-green-700 text-xs font-medium
+                px-2.5 py-0.5 rounded-full mt-2
+              "
+            >
+              <%= t(".save_yearly") %>
+            </span>
+          <% end %>
+        </div>
 
-				<div class="p-4 flex flex-row gap-8 items-center justify-between">
-					<div class="inline-flex gap-0 items-baseline">
-						<span class="text-5xl font-medium">
-							<%= number_to_currency (plan[:unit_amount].to_f / 100), unit: currency_symbol(plan[:currency]), strip_insignificant_zeros: true %>
-						</span>
+        <div class="p-4 flex flex-row gap-8 items-center justify-between">
+          <div class="inline-flex gap-0 items-baseline">
+            <span class="text-5xl font-medium">
+              <%= number_to_currency (plan[:unit_amount].to_f / 100), unit: currency_symbol(plan[:currency]), strip_insignificant_zeros: true %>
+            </span>
 
-						<span class="text-2xl whitespace-nowrap">
-							/<%= plan[:interval] %>
-						</span>
-					</div>
+            <% unless plan[:interval] == "one_time" %>
+              <span class="text-2xl whitespace-nowrap">/<%= plan[:interval] %></span>
+            <% end %>
+          </div>
 
-					<div class="">
-						<% if user_signed_in? && @organization.present? %>
-							<% if @organization.has_access? %>
-								<% if plan_for(@organization.payment_processor.subscription)[:interval] == plan[:interval].to_s %>
-									<%= button_tag t(".current_plan"), class: "btn btn-secondary", disabled: true %>
-								<% else %>
-									<%= button_to t("organizations.subscriptions.plan.manage_billing"), organization_subscriptions_billing_portal_path(Current.organization), data: { turbo: false }, class: "btn btn-secondary" %>
-								<% end %>
+          <div>
+            <% if user_signed_in? && @organization.present? %>
+              <% if @organization.has_access? %>
+                <% if plan[:interval] == "one_time" %>
+                  <%# For one-time payments, allow multiple purchases %>
+                  <%= link_to t(".purchase"), organization_subscriptions_checkout_path(Current.organization, price_id: plan[:id]), data: { turbo: false }, class: "btn btn-primary" %>
+                <% else %>
+                  <%# For subscriptions, check current subscription %>
+                  <% current_plan = plan_for(@organization.payment_processor.subscription) if @organization.payment_processor&.subscription %>
+                  <% if current_plan && current_plan[:interval] == plan[:interval].to_s %>
+                    <%= button_tag t(".current_plan"), class: "btn btn-secondary", disabled: true %>
+                  <% else %>
+                    <%= button_to t("organizations.subscriptions.plan.manage_billing"), organization_subscriptions_billing_portal_path(Current.organization), data: { turbo: false }, class: "btn btn-secondary" %>
+                  <% end %>
+                <% end %>
+              <% else %>
+                <% button_text = plan[:interval] == "one_time" ? t(".purchase") : t(".subscribe") %>
+                <%= link_to button_text, organization_subscriptions_checkout_path(Current.organization, price_id: plan[:id]), data: { turbo: false }, class: "btn btn-primary" %>
+              <% end %>
+            <% else %>
+              <% button_text = plan[:interval] == "one_time" ? t(".purchase") : t(".subscribe") %>
+              <%= link_to button_text, new_user_registration_path, class: "btn btn-primary" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 
-							<% else %>
-								<%= link_to t(".subscribe"), organization_subscriptions_checkout_path(Current.organization, price_id: plan[:id]), data: { turbo: false }, class: "btn btn-primary" %>
-							<% end %>
-						<% else %>
-							<%= link_to t(".subscribe"), new_user_registration_path, class: "btn btn-primary" %>
-						<% end %>
-					</div>
-				</div>
-			</div>
-		<% end %>
-	</div>
-
-	<div class="text-center text-base-content/50 font-medium text-sm">
-		<%= t(".cancel_security") %>
-	</div>
+  <div class="text-center text-base-content/50 font-medium text-sm">
+    <%= t(".cancel_security") %>
+  </div>
 <% end %>
