--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -33,7 +33,7 @@
       <%# mobile - sidebar for switching between organizations %>
       <div class="<% if Current.organization %> lg:hidden <% end %>">
         <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/compass.svg", active: :exact %>
-        <% Current.organizations.each do |organization| %>
+        <% Current.organizations&.each do |organization| %>
           <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6") %>
         <% end %>
       </div>
