--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,11 +34,13 @@
     <%# if Flipper.enabled?(:search, current_user) %>
     <%# if Flipper[:search].enabled?(current_user) %>
     <%# if Flipper[:search].enabled? %>
-    <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "max-lg:hidden input input-sm gap-1 cursor-pointer lg:min-w-64 rounded-lg" do %>
-      <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-4 w-4 h-4" %>
-      <span class="grow hidden lg:block"><%= t("search.index.title") %></span>
-      <kbd class="kbd kbd-sm hidden lg:inline-flex">⌘</kbd>
-      <kbd class="kbd kbd-sm hidden lg:inline-flex">K</kbd>
+    <% unless current_page?(search_path) %>
+      <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "max-lg:hidden input input-sm gap-1 cursor-pointer lg:min-w-64 rounded-lg" do %>
+        <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-4 w-4 h-4" %>
+        <span class="grow hidden lg:block"><%= t("search.index.title") %></span>
+        <kbd class="kbd kbd-sm hidden lg:inline-flex">⌘</kbd>
+        <kbd class="kbd kbd-sm hidden lg:inline-flex">K</kbd>
+      <% end %>
     <% end %>
 
     <%# end %>
@@ -89,7 +91,7 @@
 </nav>
 
 <% if Current.organization %>
-  <div class="menu menu-horizontal lg:hidden">
+  <div class="menu menu-horizontal lg:hidden !mt-0 !pt-0">
     <%= render "shared/sidebar_links" %>
   </div>
 <% end %>
